--- a/_site.yml
+++ b/_site.yml
@@ -4,7 +4,7 @@ navbar:
   title: "Terrorism Visualisations"
   left:
     - text: "Terrorist Attacks"
-      href: index.html
+      href: attack.html
     - text: "State Vulnerability"
       href: state.html
     - text: "Terrorist Ideologies"
